force-app-modified/main/default/objects/Certification__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>סירה</label>
    <referenceTo>Boats__c</referenceTo>
    <relationshipLabel>הסמכות</relationshipLabel>
    <relationshipName>Certified_boat</relationshipName>
    <type>Lookup</type>
</CustomField>