force-app-modified/main/default/objects/Certification__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>