force-app-modified/main/default/objects/Certification__c/fields/qualification_remarks__c.field-meta.xml
<CustomField>
    <fullName>qualification_remarks__c</fullName>
    <label>הערות הסמכה</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>